--- a/index.html
+++ b/index.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Jay-R Zuniga - A Web Developer</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lobster&family=Lovers+Quarrel&display=swap" rel="stylesheet">
+    <link rel="icon" href="C:\Users\JAY-R\Desktop\My Personal Site\css\images\favicon.ico"
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>My Personal Site</title>
-</head>
+  </div>
+    <div class="top-container">
+      <img class="top-cloud"src="css/images/cloud.png" alt="clouds">
+        <h1>I'm Jay-R</h1>
+        <h2>A Barista and Beginner Web Developer</h2>
+      <img class="bottom-cloud"src="css/images/cloud.png" alt="clouds">
+      <img class="mountain" src="css/images/mountain.png" alt="mountain">
+  </div>
 
-<body>
-  <table cellspacing="20">
-    <td><img src="jay r zuñiga 2x2.jpg"></td>
-    <td>
-      <h2>Jonh Ronel M. Zuniga</h2>
-      <p>A full-time Barista at <em><strong><a href=https://www.starbucks.ph />Starbucks Philippines</a></strong></em></p>
-    </td>
-  </table>
-  <hr>
-  <h3>Work Experiences</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Dates</th>
-      <th>Works</th>
-    </thead>
-    <tbody>
-      <td>July 16, 2019 - Present</td>
-      <td><strong>Starbucks Philippines</strong></td>
-    </tbody>
-    <tbody>
-      <td>June 2, 2016 - July 7, 2019</td>
-      <td><strong>Pearl Lane Hotel</strong></td>
-    </tbody>
-    <tbody>
-      <td> May 4 2015, - June 1, 2016</td>
-      <td><strong>Congressman Gunigundo District Office</strong></td>
-    </tbody>
-  </table>
-  <hr>
-  <h3> Skills </h3>
+  <div class="middle-container">
+      <div class="profile">
+        <img class="background" src="C:\Users\JAY-R\Desktop\My Personal Site\css\images\seabackground.jfif" alt="middle-background" >
+        <img class="profilepic" src="C:\Users\JAY-R\Desktop\My Personal Site\css\images\jay r zuñiga 2x2.jpg" alt="my-profile-pic">
+        <h2>Hello.</h2>
+        <p class="intro">I'm Jay-R. A full time-barista at <a href="https://www.starbucks.ph/">Starbucks Philippines</a> and a beginner web developer.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="barista" src="https://media.giphy.com/media/us87O5QcCXCvmLDHVY/giphy.gif" alt="barista">
 
-  <table>
-    <td>
-      <table>
-        <tr>
-          <td>Customer Service</td>
-          <td>✨✨✨✨✨</td>
-        </tr>
-        <tr>
-          <td>Coffee Making</td>
-          <td>✨✨✨✨✨</td>
-        </tr>
-        <tr>
-          <td>Cleaning Procedures</td>
-          <td>✨✨✨✨✨</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-      <table>
-        <tr>
-          <td>Computer Hardware Servicing</td>
-          <td>✨✨✨</td>
-        </tr>
-        <tr>
-          <td>Computer Troubleshooting</td>
-          <td>✨✨✨</td>
-        </tr>
-        <tr>
-          <td>Web Developing</td>
-          <td>✨</td>
-        </tr>
-      </table>
-    </td>
-  </table>
-  <hr>
-    <h3><a href= "contact.html">Contact Me</a></h3>
+          <div class="barista-description">
+          <h3>Barista</h3>
+          <p>To brew, mix and serve different coffee beverage genuinely of your preferences.
+              I started to become barista a year ago and tasted already different kinds of Coffee
+              came from different region of the world. I'm also one of the "BARISTA TRAINER" at Starbucks
+              Congressional Ave. branch.</p>
+          </div>
+      </div>
+<br />
+        <div class="skill-row">
+          <img class="webdeveloper" src="https://media.giphy.com/media/MaI6BylfjAkDkfk4OC/giphy.gif" alt="web-developer">
+
+          <div class="web-description">
+          <h3>Beginner Web Developer</h3>
+          <p>A beginner student looking for development and skills in terms of web developing.
+              I started lately to develop my skills with the help of <a href="https://www.udemy.com/">UDEMY ONLINE COURSE"</a>,
+              a bootcamp for starter to become one of a good developer in the future.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <br />
+        <h3>If you Love Coffee as much as I do.</h3>
+        <br />
+        <p class= "contact-message">Love coffee as much as I do? Let's talk about about how awesome they are! We can code while we're drinking coffee!</p>
+        <br />
+        </div>
+        <a class="btn" href="mailto:jhayar.zuniga@gmail.com">CONTACT ME</a>
 
 
+<br>
 
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.facebook.com/lalhabs.jayar.nixie/">Facebook</a>
+      <p class="footer-phara">© 2021 Jay-R Zuniga @ Starbucks Philippines.</p>
+    </div>
+
+  <body>
+
+  </body>
 </html>
