--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lobster&family=Lovers+Quarrel&display=swap" rel="stylesheet">
-    <link rel="icon" href="C:\Users\JAY-R\Desktop\My Personal Site\css\images\favicon.ico"
+    <link rel="icon" href="css\images\favicon.ico"
   </head>
 
   </div>
@@ -22,8 +22,8 @@
 
   <div class="middle-container">
       <div class="profile">
-        <img class="background" src="C:\Users\JAY-R\Desktop\My Personal Site\css\images\seabackground.jfif" alt="middle-background" >
-        <img class="profilepic" src="C:\Users\JAY-R\Desktop\My Personal Site\css\images\jay r zuñiga 2x2.jpg" alt="my-profile-pic">
+        <img class="background" src="css\images\seabackground.jfif" alt="middle-background" >
+        <img class="profilepic" src="css\images\jay r zuñiga 2x2.jpg" alt="my-profile-pic">
         <h2>Hello.</h2>
         <p class="intro">I'm Jay-R. A full time-barista at <a href="https://www.starbucks.ph/">Starbucks Philippines</a> and a beginner web developer.</p>
       </div>
